Try to fix package.json

--- a/package.json
+++ b/package.json
@@ -23,38 +23,39 @@
   "dependencies": {
     "argv-parse": "^1.0.1",
     "axios": "^0.17.1",
-    "babel-loader": "*",
-    "babel-plugin-syntax-dynamic-import": "*",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "validator": "^9.4.0",
     "webpack": "^3.10.0",
-    "webpack-merge": "^4.1.1",
-    "html-webpack-plugin": "^2.30.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "webpack-dev-middleware": "^2.0.4"
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-merge": "^4.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "*",
-    "babel-jest": "*",
+    "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "*",
-    "babel-preset-flow": "*",
-    "babel-preset-stage-0": "*",
-    "babel-register": "*",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "css-loader": "^0.28.9",
     "css-module-flow": "*",
     "debug": "*",
     "eslint": "^4.10.0",
-    "eslint-config-airbnb": "*",
-    "eslint-plugin-flowtype": "*",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-flowtype": "^2.42.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "flow-bin": "^0.57",
-    "flow-typed": "*",
+    "flow-typed": "^2.3.0",
     "jest": "^22.1.4",
     "jest-cli": "^22.1.4",
     "js-beautify": "^1.7.5",
