--- a/package.json
+++ b/package.json
@@ -32,11 +32,17 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "bootstrap": "^4.0.0",
+    "css-loader": "^0.28.9",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
+    "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.1",
     "validator": "^9.4.0",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4",
@@ -45,7 +51,6 @@
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.2.0",
-    "css-loader": "^0.28.9",
     "css-module-flow": "*",
     "debug": "*",
     "eslint": "^4.10.0",
@@ -60,12 +65,7 @@
     "jest-cli": "^22.1.4",
     "js-beautify": "^1.7.5",
     "keycode": "^2.1.9",
-    "moxios": "^0.4.0",
-    "node-sass": "^4.7.2",
-    "pug": "^2.0.0-rc.4",
-    "pug-loader": "^2.3.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1"
+    "moxios": "^0.4.0"
   },
   "jest": {
     "moduleNameMapper": {
