--- a/package.json
+++ b/package.json
@@ -63,13 +63,18 @@
     "flow-typed": "^2.3.0",
     "jest": "^22.1.4",
     "jest-cli": "^22.1.4",
+    "jest-environment-jsdom": "^22.2.0",
+    "jest-environment-jsdom-global": "^1.0.3",
     "js-beautify": "^1.7.5",
+    "js-polyfills": "^0.1.41",
     "keycode": "^2.1.9",
-    "moxios": "^0.4.0"
+    "nock": "^9.1.6",
+    "timer-promise": "0.0.2"
   },
   "jest": {
     "moduleNameMapper": {
       "\\.s?css$": "<rootDir>/config/jest/__mocks__/styles.js"
-    }
+    },
+    "testEnvironment": "jest-environment-jsdom-global"
   }
 }
