--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-register": "^6.26.0",
     "bootstrap": "^4.0.0",
     "css-loader": "^0.28.9",
+    "exports-loader": "^0.7.0",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
