--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
     "pug": "^2.0.0-rc.4",
